--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,10 @@
         vertical-align: top;
     } 
 
+    html{
+        background-color: #F1D6C7;
+    }
+
 
 .logo
     {
@@ -30,7 +34,7 @@ nav
 
 .heroImg
     {
-        height: 600px;
+        height: 700px;
         padding: 25px;
     }
 
@@ -52,8 +56,10 @@ nav
 .flexContainer > div
 {
     width: 33%;
-    background-color: #933907;
+    background-color: #773131;
     color: #F1D6C7;
+    justify-content: center;
+    width: 400px;
 }
 
 
@@ -67,36 +73,52 @@ nav
 .item1
 {
     grid-area: 1 / 1 / 2 / 2 ;   
-    background-color: #FEA775;
-    color: #311809;
+    background-color: #B23D3D;
+    color: #F1D6C7;
+}
+
+.Butterfly
+{
+    width: 100px;
 }
 
 .item2
 {
     grid-area: 1 / 4 / 2 / 3  ;
-    background-color: #FEA775;
+    background-color: #B23D3D;
 }
 
 .item3
 {
     grid-area: 3 / 1 / 3 / 3  ;
-    background-color: #933907;
+    background-color: #773131;
     color: #F1D6C7;
 }
 
 .item4
 {
     grid-area: 3 / 4 / 3 / 3  ;
-    background-color: #933907;
+    background-color: #773131;
     color: #F1D6C7;
 }
 
 
 
+header
+{
+    background-color: #6F3838;
+}
+
+button
+{
+    background-color: #773131;
+    color: #F1D6C7;
+}
+
+
 footer
     {
-        background-color: #373738;
-        padding: 4%; 
+        background-color: #6F3838;
     }
 
 
@@ -104,7 +126,6 @@ footer ul
 {
     display: inline-block;
     vertical-align: top;
-    padding: 2%;
 }
 
 
